--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ pytest>=7.2.0
 
 # Optional (für spätere ML-/Deep-Learning-Erweiterungen)
 torch>=2.0.0
+
+pydantic-settings>=0.5.0
+pydantic~=2.11.7
+nbformat~=5.10.4
